# cis1912-final-project

./: .dockerignore  .gitignore  Makefile  PROJECT_WRITEUP.MD  README.md  pyproject.toml
.github/: README.md
.github/workflows/: README.md  ci.yml
control-plane/: README.md  wrangler.toml
control-plane/orchestrator/: README.md  __init__.py  config.py  docker_client.py  locks.py  main.py  models.py  registry.py
control-plane/src/: README.md  index.ts
demo-frontend/: README.md  index.html  styles.css
infra/: README.md  main.tf
orchestrator/: __init__.py  docker.py  server.py
sandbox/: .dockerignore  Dockerfile  README.md  healthcheck.sh
scripts/: run_demo_task.py
snapshot/: README.md  __init__.py  diff.py  rollback.py  safe_run.py  snapshot.py
tests/control_plane/: conftest.py  test_ci_contract.py  test_orchestrator_app.py  test_orchestrator_consolidation.py  test_orchestrator_docker_client.py  test_orchestrator_docker_integration.py  test_orchestrator_registry.py  test_worker_contract.py
tests/e2e/: test_local_worker_flow.py
tests/orchestrator/: test_docs_contract.py  test_lifecycle.py
tests/sandbox/: test_demo_frontend_contract.py  test_docker_contract.py
tests/scripts/: test_run_demo_task.py
tests/snapshot/: test_diff.py  test_rollback.py  test_safe_run.py  test_snapshot.py
