[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "saep"
version = "0.1.0"
description = "Sandboxed Agent Execution Platform"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
safe-run = "snapshot.safe_run:main"

[tool.setuptools]
packages = ["snapshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
  "integration: tests that require Docker or other external services",
]
