[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "saep"
version = "0.1.0"
description = "Sandboxed Agent Execution Platform"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
orchestrator = [
  "docker>=7.0",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.0",
  "uvicorn>=0.27",
]

[project.scripts]
safe-run = "snapshot.safe_run:main"
saep-orchestrator = "orchestrator.server:main"

[tool.setuptools]
packages = ["orchestrator", "snapshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
  "integration: tests that require Docker or other external services",
  "e2e: full local Worker to orchestrator to Docker smoke tests",
]
